# senseless_soccer_x

./: CMakeLists.txt
data/: calibration.cfg
libs/sfml/Debug/: libsfml-system-d.so.2.5.1
libs/sfml/Release/: libsfml-graphics.so.2.5  libsfml-network.so.2.5.1
scripts/: .setup_linux.sh.kate-swp  build_linux.sh  clean_linux.sh  run_linux.sh  setup_linux.sh
sfml/lib/: libsfml-audio.so.2.5  libsfml-audio.so.2.5.1  libsfml-network.so.2.5.1  libsfml-window.so.2.5.1
src/: global.hpp  main.cpp
src/drawables/: DrawableGamepad.cpp  DrawableGamepad.hpp
src/files/: files.cpp  files.h
src/game/: .Engine.cpp.kate-swp  .Match.cpp.kate-swp  .MatchPlay.hpp.kate-swp  .match_resources.cpp.kate-swp  .match_resources.hpp.kate-swp  .movable.cpp.kate-swp  Ball.cpp  Ball.h  Controllable.cpp  Controllable.h  Controllable.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.h  Entity.hpp  Gamestate.cpp  Gamestate.h  Gamestate.hpp  Match.cpp  Match.h  Match.hpp  MatchPlay.cpp  MatchPlay.hpp  MatchState.cpp  MatchState.hpp  Movable.cpp  Movable.hpp  Player.cpp  Player.hpp  PlayerState.cpp  PlayerState.hpp  PlayerStateRun.cpp  PlayerStateRun.hpp  PlayerStateStand.cpp  PlayerStateStand.hpp  Renderable.cpp  Renderable.hpp  ball.cpp  ball.h  (+28 more)
src/graphics/: Sprite.cpp  Sprite.hpp  SpriteAnimation.cpp  SpriteAnimation.hpp  Texture.cpp  Texture.hpp  TileMap.cpp  TileMap.hpp  sprite_definitions.h  texture.cpp  texture.h
src/input/: Controllable.cpp  Controllable.hpp  Controller.cpp  Controller.hpp  Gamepad.cpp  Gamepad.hpp  GamepadController.cpp  GamepadController.hpp  InputDevice.cpp  InputDevice.hpp  Keyboard.cpp  Keyboard.hpp  KeyboardController.cpp  KeyboardController.hpp  controller_tools.cpp  controller_tools.hpp  gamepad.cpp  gamepad.h  input.cpp  input.h  input.hpp
src/math/: math.h  math.hpp  vector.h  vector.hpp
src/menu/: .Widget.hpp.kate-swp  .WidgetLabel.cpp.kate-swp  .WidgetLabel.hpp.kate-swp  .menu.cpp.kate-swp  .menu.h.kate-swp  .widgets.cpp.kate-swp  Animation.h  Animation.hpp  AnimationFade.hpp  AnimationFlash.h  AnimationFlash.hpp  Button.cpp  Button.h  Button.hpp  GamepadWidget.cpp  GamepadWidget.hpp  ListBox.cpp  ListBox.hpp  Menu.cpp  Menu.h  Menu.hpp  Page.cpp  Page.h  Page.hpp  PageCalibrate.cpp  PageCalibrate.hpp  PageMain.cpp  PageMain.hpp  Widget.cpp  Widget.hpp  WidgetLabel.cpp  WidgetLabel.hpp  animation.h  animation_flash.h  button.cpp  button.h  button_widget.cpp  calibration_page.cpp  calibration_page.h  events.h  (+15 more)
src/physics/: collisions.h
src/resources/: Resources.hpp
src/sfml/: sfml_tools.hpp
src/utils/: utils.h
